@@ -1,3 +1,11 @@
+2007-05-31  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/entry.py:
+	* tests/test_Entry.py:
+	Fix for #3408, Entry reads valueunset always, when empty
+
 2007-05-31  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/dateentry.py (DateEntry.get_date): Catch ValidationError
